ATLAS-1009: show multiple or single status change

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -553,7 +553,8 @@
       "STATUS_CHANGE": "Status ändern",
       "COMMENT_LABEL": "Kommentar dazu",
       "BACK": "Zurück",
-      "STATUS_CHANGE_MESSAGE": "Sie ändern die ausgewählte Stellungnahme."
+      "STATUS_CHANGE_MESSAGE": "Sie ändern die ausgewählte Stellungnahme.",
+      "MULTIPLE_STATUS_CHANGE_MESSAGE": "Sie ändern {{tthsLength}} ausgewählte Stellungnahme."
     },
     "TAB": {
       "ACTUAL": "Aktuelle Anhörung",
