ATLAS-1016: File Download and name restriction

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -80,6 +80,7 @@
         "FILE_SIZE": "{{filename}} konnte nicht hinzugefügt werden. Die Grenze von {{maxsize}} wurde überschritten.",
         "TYPE": "{{filename}} konnte nicht hinzugefügt werden. Der Dateityp wird nicht unterstützt.",
         "FILE_COUNT": "Es sind maximal {{maxFileCount}} Dateien erlaubt.",
+        "ALREADY_SAVED": "Die Datei {{filename}} wurde bereits hochgeladen und gespeichert.",
         "ALREADY_ADDED": "Die Datei {{filename}} wurde bereits hinzugefügt."
       }
     }
