--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -80,6 +80,7 @@
         "FILE_SIZE": "{{filename}} n'a pas pu être ajouté. La limite de {{maxsize}} a été dépassée.",
         "TYPE": "{{filename}} n'a pas pu être ajouté. Le type de fichier n'est pas pris en charge.",
         "FILE_COUNT": "Un maximum de {{maxFileCount}} fichiers est autorisé.",
+        "ALREADY_SAVED": "Le fichier {{filename}} a déjà été téléchargé et enregistré.",
         "ALREADY_ADDED": "Le fichier {{filename}} a déjà été ajouté."
       }
     }
