ATLAS-1016: style statement detail

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -667,7 +667,7 @@
       "JUSTIFICATION": "Begründung",
       "COMMENT": "Kommentar zur Kantonsübergabe",
       "ATTACHMENT_INFO": "Sie können die Stellungnahme mit PDF-Anhang einreichen. Es sind 3 PDFs bis zu 20 MB möglich.",
-      "ATTACHMENT_BUTTON": "PDF anhängen",
+      "ATTACHMENTS": "Bestehende Anhänge",
       "ORGANISATION": "Organisation/Vereinigung",
       "ZIP": "PLZ",
       "CITY": "Ort/Stadt",
