--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -16,6 +16,7 @@
   "COMMON": {
     "BACK_TO_OVERVIEW": "Retour au sommaire",
     "SAVE": "Sauvegarder",
+    "SAVE_AND_CLOSE": "Enregistrer & fermer",
     "ADD": "Ajouter",
     "EDIT": "Modifier",
     "REVOKE": "Saisie des erreurs",
@@ -571,7 +572,7 @@
       "ADD_NEW_STATEMENT": "Saisir un nouvel avis",
       "ADD_NEW_TIMETABLE_HEARING": "Créer une nouvelle consultation sur les horaires",
       "START_TIMETABLE_HEARING": "Lancer cette année d'horaire",
-      "CLOSE_TIMETABLE_HEARING": "__fr__Fahrplanjahr schliessen",
+      "CLOSE_TIMETABLE_HEARING": "Clôture de l'année horaire",
       "CANCEL_COLLECTING_ACTION": "Terminer la collecte"
     },
     "DROPDOWN": {
@@ -702,6 +703,20 @@
         "CANCEL": "Retour",
         "CONFIRM": "Changer de canton"
       }
+    },
+    "CLOSE_TIMETABLE_HEARING": {
+      "POPUP_TITLE": "Clôture de l'année horaire",
+      "CONFIRMATION_MESSAGE": "Vous souhaitez fermer l'année horaire ? Cette action ne peut pas être annulée. Lors de la clôture de l'année d'horaire, les prises de position sont déplacées:",
+      "MOVEMENTS_TO_ARCHIVED": "\"acceptée\", \"rejeté\" ou \"Saisie des erreurs\" → archives",
+      "MOVEMENTS_TO_NEXT_YEAR": "\"arriver\", \"À l'étude\" ou \"Retardé\" → l'année d'horaire suivante",
+      "MOVEMENTS_TO_DELETED": "\"Spam-Mail\" → irrévocablement supprimé",
+      "SUCCESSFUL_CLOSE_NOTIFICATION": "Année d'horaire clôturée avec succès"
+    },
+    "MANAGE_TIMETABLE_HEARING": {
+      "POPUP_TITLE": "Contrôle de la consultation de l'horaire",
+      "CREATE_STATEMENT_EXTERNAL": "Saisie de l'avis via API",
+      "CREATE_STATEMENT_INTERNAL": "Saisie de l'avis dans atlas",
+      "EDIT_STATEMENT": "Traitement de l'avis dans atlas"
     }
   }
 }
