--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -551,7 +551,8 @@
       "CANTON_CHANGE": {
         "SUCCESS": "Il cantone è stato modificato con successo."
       },
-      "NO_VERSION_VALID_AT": "Non esiste una versione valida di {{swissId}} su {{validAt}}. Verificare la validità del numero del campo orario."
+      "NO_VERSION_VALID_AT": "Non esiste una versione valida di {{swissId}} su {{validAt}}. Verificare la validità del numero del campo orario.",
+      "OPERATION_NOT_ALLOWED_DUE_TO_TTH_YEAR_SETTINGS": "Questa operazione non è possibile a causa della configurazione dell'anno orario."
     },
     "DIALOG": {
       "STATUS_CHANGE": "Modificare lo stato",
