--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -547,10 +547,14 @@
       "STATUS_CHANGE": {
         "SUCCESS": "Der Status wurde erfolgreich geändert."
       },
+      "CANTON_CHANGE": {
+        "SUCCESS": "Der Kanton wurde erfolgreich geändert."
+      },
       "NO_VERSION_VALID_AT": "Es gibt keine gültige Version von {{swissId}} am {{validAt}}. Bitte überprüfen Sie die Gültigkeit der Fahrplanfeldnummer."
     },
     "DIALOG": {
       "STATUS_CHANGE": "Status ändern",
+      "CANTON_CHANGE": "Kanton ändern",
       "COMMENT_LABEL": "Kommentar dazu",
       "BACK": "Zurück",
       "STATUS_CHANGE_MESSAGE": "Sie ändern die ausgewählte Stellungnahme.",
