--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -545,12 +545,16 @@
   "TTH": {
     "NOTIFICATION": {
       "STATUS_CHANGE": {
-        "SUCCESS": "Lo stato è stato modificato con successo"
+        "SUCCESS": "Lo stato è stato modificato con successo."
+      },
+      "CANTON_CHANGE": {
+        "SUCCESS": "Il cantone è stato modificato con successo."
       },
       "NO_VERSION_VALID_AT": "Non esiste una versione valida di {{swissId}} su {{validAt}}. Verificare la validità del numero del campo orario."
     },
     "DIALOG": {
       "STATUS_CHANGE": "Modificare lo stato",
+      "CANTON_CHANGE": "Modificare il cantone",
       "COMMENT_LABEL": "Commento",
       "BACK": "Indietro",
       "STATUS_CHANGE_MESSAGE": "Modifica la dichiarazioni per l'orario selezionata.",
