ATLAS-1105: Test maillink generation

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -663,8 +663,8 @@
       "CLARIFICATION": "Stellungnahme abklären",
       "CLARIFICATION_INFO": "Die Daten dieser Stellungnahme werden in Ihr E-Mail übernommen.",
       "CLARIFICATION_MAIL": "E-Mail öffnen",
-      "REQUEST": "Anfrage Stellungnahme ",
-      "TTFN": "Fahrplanfeld: {{number}} {{description}}",
+      "REQUEST": "Anfrage Stellungnahme",
+      "TTFN": "Fahrplanfeld",
       "FIRST_NAME": "Vorname",
       "LAST_NAME": "Nachname",
       "E_MAIL": "E-Mail",
