--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -663,8 +663,8 @@
       "CLARIFICATION": "Clarifier la prise de position",
       "CLARIFICATION_INFO": "Les données de cet avis seront reprises dans votre e-mail.",
       "CLARIFICATION_MAIL": "Envoyer un courriel",
-      "REQUEST": "Demande de prise de position ",
-      "TTFN": "Champ de l'horaire: {{number}} {{description}}",
+      "REQUEST": "Demande de prise de position",
+      "TTFN": "Champ de l'horaire",
       "FIRST_NAME": "Prénom",
       "LAST_NAME": "Nom de famille",
       "E_MAIL": "Courrier électronique",
