--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -663,8 +663,8 @@
       "CLARIFICATION": "Chiarire il parare",
       "CLARIFICATION_INFO": "I dati di questo parare saranno trasferiti alla vostra e-mail.",
       "CLARIFICATION_MAIL": "Aprire un'e-mail ",
-      "REQUEST": "Richiesta parare ",
-      "TTFN": "Numero del quadro d’orario: {{number}} {{description}}",
+      "REQUEST": "Richiesta parare",
+      "TTFN": "Numero del quadro d’orario",
       "FIRST_NAME": "Nome",
       "LAST_NAME": "Cognome",
       "E_MAIL": "E-Mail",
