--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -45,7 +45,7 @@
     "VALID_FROM": "Valable du",
     "VALID_TO": "Valable au",
     "EDIT_ON": "Modifiée",
-    "EDIT_BY": "à travers",
+    "EDIT_BY": "Par",
     "STATUS": "Statut",
     "CANTONS": "Cantons",
     "STATUS_TYPES": {
@@ -176,10 +176,10 @@
       "DESCRIPTION": "__Hier finden Sie alle Informationen zum Bearbeiten und neu Erstellen von Dienststellen.__"
     },
     "TTH": {
-      "TITLE": "Consultation le projet d'horaire en Suisse",
-      "TITLE_MENU": "Consultation le projet d'horaire",
-      "DESCRIPTION": "Vous trouverez ici toutes les informations relatives à la consultation le projet d'horaire en Suisse.",
-      "PATH_TEXT": "Consultation le projet d'horaire"
+      "TITLE": "Consultation sur le projet d'horaire en Suisse",
+      "TITLE_MENU": "Consultation sur le projet d'horaire",
+      "DESCRIPTION": "Vous trouverez ici toutes les informations relatives à la consultation sur le projet d'horaire en Suisse.",
+      "PATH_TEXT": "Consultation sur le projet d'horaire"
     },
     "DETAILS": "Précisions"
   },
@@ -570,11 +570,11 @@
     },
     "TAB": {
       "ACTUAL": "Audition actuelle",
-      "PLANNED": "Audition prévue",
-      "ARCHIVED": "Audition archivée"
+      "PLANNED": "Auditions prévues",
+      "ARCHIVED": "Auditions archivées"
     },
     "BUTTON": {
-      "DOWNLOAD_CSV": "Download [CSV]",
+      "DOWNLOAD_CSV": "Télécharger [CSV]",
       "MANAGE_TIMETABLE_HEARING": "Contrôle de la consultation de l'horaire",
       "ADD_NEW_STATEMENT": "Saisir une nouvelle prise de position",
       "ADD_NEW_TIMETABLE_HEARING": "Créer une nouvelle consultation sur les horaires",
@@ -614,7 +614,7 @@
         "NOTIFICATION_SUCCESS": "Consultation des horaires enregistrée avec succès"
       }
     },
-    "SELECT_CANTON": "Sélectionner le canton",
+    "SELECT_CANTON": "Sélectionner un canton",
     "SELECT_YEAR": "Sélectionner l'année",
     "TABLE_RESULT_HEADING": "{{totalCount}} Prises de position pour l'année d'horaire {{year}}",
     "TABLE_RESULT_ACTUAL_HEARING_HEADING_PREFIX": "{{totalCount}} Prises de position ",
@@ -636,11 +636,11 @@
       "OVERVIEW_ARCHIVED_NOT_FOUND": "Aucune audition archivée n'est actuellement disponible."
     },
     "STATEMENT_STATUS": {
-      "RECEIVED": "réceptionnée",
-      "IN_REVIEW": "en cours de traitement",
-      "ACCEPTED": "acceptée",
-      "REJECTED": "rejetée",
-      "MOVED": "reporté",
+      "RECEIVED": "Réceptionnée",
+      "IN_REVIEW": "En cours de traitement",
+      "ACCEPTED": "Acceptée",
+      "REJECTED": "Rejetée",
+      "MOVED": "Reportée",
       "JUNK": "*Spam-Mail*",
       "REVOKED": "Saisie des erreurs"
     },
@@ -676,7 +676,7 @@
     "STATEMENT": {
       "NEW": "Saisir un nouvel avis",
       "STATEMENT": "Prise de position",
-      "STATEMENT_INFO": "Indiquez les liaisons (par ex. la liaison avec départ à 12h35) pour lesquelles la confirmation a lieu.",
+      "STATEMENT_INFO": "Indiquez les liaisons (par ex. la liaison avec départ à 12h35) pour lesquelles la prise de position a lieu.",
       "ROUTE": "Parcours",
       "STOP_POINT": "Arrêt",
       "STOP_POINT_INFO": "Description de l'arrêt référencé",
