--- a/line-directory/src/main/resources/hearing/translations/csvHeaders_fr.properties
+++ b/line-directory/src/main/resources/hearing/translations/csvHeaders_fr.properties
@@ -1,18 +1,18 @@
-cantonAbbreviation=Canton
-timetableFieldNumber=Numéro du tableau-horaire
-timetableFieldNumberDescription=Désignation du champ d'horaire
-stopPlace=Halte
-transportCompanyAbbreviations=Abréviation Entreprise de transport
-transportCompanyDescriptions=Nom Transportunternehmung
-statement=Prise de position
-documentsPresent=Attachement
-justification=Fondation
-firstName=Nom de baptême
-lastName=Nom de famille
-organisation=Organisation
-street=Route
+cantonAbbreviation=canton
+timetableFieldNumber=numéro du tableau-horaire
+timetableFieldNumberDescription=désignation numéro d'horaire
+stopPlace=arrêt
+transportCompanyAbbreviations=abréviation entreprise de transport
+transportCompanyDescriptions=nom entreprise de transport
+statement=prise de position
+documentsPresent=annex
+justification=explication
+firstName=prénom
+lastName=nom de famille
+organisation=organisation
+street=route
 zip=NPA/localité
-email=Courriel
-editor=Responsable du traitement
-editionDate=Dernière modification
-timetableHearingYear=Année horaire
+email=e-mail
+editor=éditeur
+editionDate=dernière modification
+timetableHearingYear=année projet d'horaire
