ATLAS-1210: Add additional status

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -640,6 +640,8 @@
       "IN_REVIEW": "in Abklärung",
       "ACCEPTED": "angenommen",
       "REJECTED": "abgelehnt",
+      "NOTED": "zur Kenntnisnahme",
+      "PARTLY_IMPLEMENTED": "teilweise umgesetzt",
       "MOVED": "verschoben",
       "JUNK": "*Spam-Mail*",
       "REVOKED": "Fehlerfassung"
