--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -556,6 +556,14 @@
       "NO_VERSION_VALID_AT": "Es gibt keine gültige Version von {{swissId}} am {{validAt}}. Bitte überprüfen Sie die Gültigkeit der Fahrplanfeldnummer.",
       "OPERATION_NOT_ALLOWED_DUE_TO_TTH_YEAR_SETTINGS": "Diese Operation ist durch die Konfiguration des Fahrplanjahres nicht möglich."
     },
+    "DUPLICATE": {
+      "DIALOG": {
+        "TITLE": "Duplikat erstellen",
+        "MESSAGE": "Wollen Sie diese Stellungnahme wirklich duplizieren?",
+        "CONFIRM": "Duplikat erstellen",
+        "CANCEL": "Abbrechen"
+      }
+    },
     "DIALOG": {
       "STATUS_CHANGE": "Status ändern",
       "CANTON_CHANGE": "Kanton ändern",
@@ -575,6 +583,7 @@
       "ARCHIVED": "Archivierte Anhörungen"
     },
     "BUTTON": {
+      "DUPLICATE": "Duplizieren",
       "DOWNLOAD_CSV": "Download [CSV]",
       "MANAGE_TIMETABLE_HEARING": "Steuerung Fahrplananhörung",
       "ADD_NEW_STATEMENT": "Neue Stellungnahme erfassen",
