--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -716,7 +716,7 @@
     "CLOSE_TIMETABLE_HEARING": {
       "POPUP_TITLE": "Chiusura dell'anno di calendario",
       "CONFIRMATION_MESSAGE": "Volete terminare l'anno di calendario? L'operazione non può essere annullata.  Quando l'anno solare si chiude, i pareri vengono rimandati:",
-      "MOVEMENTS_TO_ARCHIVED": "\"accetato\", \"rifiutato\" o \"Revocato\" → archivio",
+      "MOVEMENTS_TO_ARCHIVED": "\"accetato\", \"rifiutato\", \"presa d'atto\", \"parzialmente eseguito\" o \"Revocato\" → archivio",
       "MOVEMENTS_TO_NEXT_YEAR": "\"arrivato\", \"in esame\" o \"spostato\" → anno di calendario successivo",
       "MOVEMENTS_TO_DELETED": "\"Spam-Mail\" → definitivamente cancellati",
       "SUCCESSFUL_CLOSE_NOTIFICATION": "Anno di calendario chiuso con successo"
