--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -716,7 +716,7 @@
     "CLOSE_TIMETABLE_HEARING": {
       "POPUP_TITLE": "Clôture de l'année horaire",
       "CONFIRMATION_MESSAGE": "Vous souhaitez fermer l'année horaire ? Cette action ne peut pas être annulée. Lors de la clôture de l'année d'horaire, les prises de position sont déplacées:",
-      "MOVEMENTS_TO_ARCHIVED": "\"acceptée\", \"rejeté\" ou \"Saisie des erreurs\" → archives",
+      "MOVEMENTS_TO_ARCHIVED": "\"acceptée\", \"rejeté\", \"prise de connaissance\", \"partiellement acceptée\" ou \"Saisie des erreurs\" → archives",
       "MOVEMENTS_TO_NEXT_YEAR": "\"arriver\", \"À l'étude\" ou \"Retardé\" → l'année d'horaire suivante",
       "MOVEMENTS_TO_DELETED": "\"Spam-Mail\" → irrévocablement supprimé",
       "SUCCESSFUL_CLOSE_NOTIFICATION": "Année d'horaire clôturée avec succès"
