--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -198,6 +198,7 @@
     "MATDATEPICKERMAX": "La date doit être inférieure ou égale à {{date}}.",
     "MATDATEPICKERPARSE": "Le format de date n’est pas valable. (Format valide: JJ.MM.AAAA)",
     "DATE_RANGE_ERROR": "La date «Valide du» ne doit pas être postérieure à la date «Valide au»: {{date}}",
+    "ONE_YEAR_BEFORE": "La période d'audition doit être l'année {{number}}.",
     "PATTERN": "Format non valide. Caractères autorisés: {{allowedChars}}",
     "WHITESPACES": "Ne peut pas commencer ou se terminer par un espace.",
     "COLOR_INVALID": "Couleur attendue au format #FFFFFF",
