ATLAS-1254 ATLAS-1255 changes for csv column names on french and italian.

--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -707,7 +707,7 @@
       "ATTACHMENT_INFO": "È possibile inviare la dichiarazione con un allegato PDF. Sono possibili 3 PDF fino a 20 MB.",
       "ATTACHMENTS": "Allegati esistenti",
       "ORGANISATION": "Organizzazione/associazione",
-      "ZIP": "CAP",
+      "ZIP": "NPA",
       "CITY": "Luogo/Città",
       "STREET": "Via",
       "STATUS": "Stato",
