--- a/line-directory/src/main/resources/hearing/translations/csvHeaders_fr.properties
+++ b/line-directory/src/main/resources/hearing/translations/csvHeaders_fr.properties
@@ -5,12 +5,12 @@ stopPlace=arrêt
 transportCompanyAbbreviations=abréviation entreprise de transport
 transportCompanyDescriptions=nom entreprise de transport
 statement=prise de position
-documentsPresent=annex
-justification=explication
+documentsPresent=annexe
+justification=justification
 firstName=prénom
 lastName=nom de famille
 organisation=organisation
-street=route
+street=rue
 zip=NPA/localité
 email=e-mail
 editor=éditeur
