--- a/line-directory/src/main/resources/hearing/translations/csvHeaders_it.properties
+++ b/line-directory/src/main/resources/hearing/translations/csvHeaders_it.properties
@@ -3,15 +3,15 @@ timetableFieldNumber=Numero del quadro d'orario
 timetableFieldNumberDescription=Designazione del campo orario
 stopPlace=Fermata
 transportCompanyAbbreviations=Abbreviazione di azienda di trasporto
-transportCompanyDescriptions=Nome Transportunternehmung
+transportCompanyDescriptions=Nome azienda di trasporto
 statement=Parare
 documentsPresent=Aggiunta
-justification=Motivo
+justification=Giustificazione
 firstName=Nome
 lastName=Cognome
 organisation=Organizzazione
-street=Strada
-zip=NPA, località
+street=Via
+zip=NPA
 email=E-Mail
 editor=Sll'incaricato
 editionDate=Elaborato per ultimo
