ATLAS-1253: Add missing Status column in CSV export.

--- a/line-directory/src/main/resources/hearing/translations/csvHeaders.properties
+++ b/line-directory/src/main/resources/hearing/translations/csvHeaders.properties
@@ -6,6 +6,7 @@ transportCompanyAbbreviations=Abkürzung Transportunternehmung
 transportCompanyDescriptions=Name Transportunternehmung
 statement=Stellungnahme
 documentsPresent=Anhang
+status=Status
 justification=Begründung
 firstName=Vorname
 lastName=Nachname
