--- a/line-directory/src/main/resources/hearing/translations/csvHeaders_it.properties
+++ b/line-directory/src/main/resources/hearing/translations/csvHeaders_it.properties
@@ -6,6 +6,7 @@ transportCompanyAbbreviations=Abbreviazione di azienda di trasporto
 transportCompanyDescriptions=Nome azienda di trasporto
 statement=Parare
 documentsPresent=Aggiunta
+status=Stato
 justification=Giustificazione
 firstName=Nome
 lastName=Cognome
