ATLAS-1256: CSV export add zip/city column.

--- a/line-directory/src/main/resources/hearing/translations/csvHeaders_fr.properties
+++ b/line-directory/src/main/resources/hearing/translations/csvHeaders_fr.properties
@@ -12,7 +12,7 @@ firstName=Prénom
 lastName=Nom de famille
 organisation=Organisation
 street=Rue
-zip=NPA/localité
+zip=Code Postal/Lieu
 email=E-mail
 editor=Éditeur
 editionDate=Dernière modification
