ATLAS-1252: Adjustments according to PR comments.

--- a/line-directory/src/main/resources/hearing/translations/csvHeaders_fr.properties
+++ b/line-directory/src/main/resources/hearing/translations/csvHeaders_fr.properties
@@ -12,7 +12,7 @@ firstName=Prénom
 lastName=Nom de famille
 organisation=Organisation
 street=Rue
-zip=Code Postal/Lieu
+zipAndCity=Code Postal/Lieu
 email=E-mail
 editor=Éditeur
 editionDate=Dernière modification
