--- a/line-directory/src/main/resources/hearing/translations/csvHeaders_it.properties
+++ b/line-directory/src/main/resources/hearing/translations/csvHeaders_it.properties
@@ -12,7 +12,7 @@ firstName=Nome
 lastName=Cognome
 organisation=Organizzazione
 street=Via
-zip=NPA/Luogo
+zipAndCity=NPA/Luogo
 email=E-Mail
 editor=Sll'incaricato
 editionDate=Elaborato per ultimo
