--- a/line-directory/src/main/resources/hearing/translations/csvHeaders.properties
+++ b/line-directory/src/main/resources/hearing/translations/csvHeaders.properties
@@ -12,7 +12,7 @@ firstName=Vorname
 lastName=Nachname
 organisation=Organisation
 street=Strasse
-zip=PLZ/Ort
+zipAndCity=PLZ/Ort
 email=E-Mail
 editor=Bearbeiter
 editionDate=Zuletzt bearbeitet
